--- a/coin-collector/electron/splashscreen/index.html
+++ b/coin-collector/electron/splashscreen/index.html
@@ -10,6 +10,9 @@
     <div id="loader"></div>
     <h2 id="title">COIN COLLECTOR</h2>
   </div>
+  <h5 id="version"></h5>
 </body>
+
+<script src="./splashscreen.js"></script>
 
 </html>
